# CM-Mining

./: README.md  pyproject.toml  requirements.txt
cm-mining/: main.py
cm-mining/tests/: test_UMLviz.py  test_back2UML.py  test_command.py  test_graphClustering0.py  test_graphClustering1.py
cm-mining/tests/input/: outputpatterns.txt
cm-mining/utils/: command.py  graphClustering0.py  graphClustering1.py  gspanMiner.py  patterns.py  uml_viz.py
scripts/: requirements.txt
