[tool.poetry]
name = "cm-mining"
version = "0.0.1"
description = "CM-Mining"
license = "Apache-2.0"
authors = ["Mattia Fumagalli <mattia.fumagalli@unibz.it>"]
readme = "README.md"
repository = "https://github.com/Matt-81/CM-Mining"
packages = [{ include = "cm-mining" }]
exclude = ["cm-mining/tests"]

[tool.poetry.dependencies]
python = "^3.9"
grandiso = "^2.1.1"
gspan-mining = "^0.2.3"
jsonpath-rw-ext = "^1.2.2"
matplotlib = "^3.7.2"
networkx = "^3.1"
pandas = "^2.0.3"
prompt-toolkit = "*"
scikit-learn = "^1.3.0"
tweepy = "^4.14.0"
pyinquirer = "^1.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
